--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title></title>
   </head>
   <body>
+    <h1>Helo</h1>
     <span id="oke"></span>
   </body>
   <script src="./main.js"></script>
