--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div id="app">
     <p>{{msg}}</p>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ramda/0.27.1/ramda.min.js"></script>
   <script src="./main.js">
   </script>
 </body>
